# AIOS

./: .env.example  .gitignore  README.md  output.txt
apps/api/: .env.docker.example  Dockerfile  docker-compose.yml  pyproject.toml
apps/api/alembic/versions/: 0008_custom_jwt_auth.py
apps/api/app/: __init__.py  db.py  main.py  migrations.py  worker.py
apps/api/app/agents/: coding.py  graph.py  knowledge.py  planner.py  registry.py  research.py
apps/api/app/api/: __init__.py  dependencies.py  deps_providers.py  rate_limit_dependencies.py  schemas.py
apps/api/app/auth/: __init__.py  api_key_repository.py  clerk_verification.py  encryption.py  gemini_key_resolver.py  jwt_service.py  passwords.py  provider_resolution.py  repository.py  security.py
apps/api/app/cache/: __init__.py  redis_client.py
apps/api/app/conversations/: __init__.py  caching.py  repository.py  summarization.py
apps/api/app/core/: config.py  logging_config.py  rate_limit.py  tracing.py
apps/api/app/domain/: entities.py
apps/api/app/infrastructure/: __init__.py  models.py
apps/api/app/jobs/: __init__.py  chat_agent.py  (+3 more)
apps/api/migrations/: env.py
apps/api/scripts/: __init__.py  rotate_encryption_key.py
apps/api/tests/: conftest.py  test_auth.py  test_byok.py  test_caching.py  test_code_execution_tool.py  test_coding_agent.py  test_conversations.py  test_encryption.py  test_gemini_provider.py  test_graph.py  test_jobs.py  test_logging_config.py  test_migrations.py  test_planner.py  test_prompt_safety.py  test_rate_limit.py  test_retrieval.py  test_summarization.py  test_tracing.py
(+52 files in other folders)
