[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-os-api"
version = "0.1.0"
description = "Phase 1 backend for the AI OS monolith"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "email-validator>=2.2,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "httpx>=0.27,<1.0",
  "langgraph>=0.2,<1.0",
  "cryptography>=43.0,<47.0",
  "pgvector>=0.3,<1.0",
  "PyJWT>=2.9,<3.0",
  "upstash-redis>=1.0,<2.0",
  "langsmith>=0.1,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
